[tool.poetry]
name = "volttron-lib-topic-tree"
version = "10.1.0"
description = "Tree data structures for handling topic-based resources in VOLTTRON."
authors = ["volttron <volttron@pnnl.gov>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://volttron.org"
repository = "https://github.com/eclipse-volttron/volttron-lib-tree"
documentation = "https://volttron.readthedocs.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "volttron", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
treelib = ">=1.6.1"
volttron-core = ">=2.0.0rc26"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
